# ripdoc

./: .gitignore  Cargo.toml  README.md  publish.sh  test_python.py
crates/ripdoc-core/: Cargo.toml
crates/ripdoc-core/examples/: extract.rs
crates/ripdoc-core/src/: content_stream.rs  document.rs  error.rs  lib.rs  objects.rs  page.rs
crates/ripdoc-core/src/fonts/: cmap.rs  encoding.rs  metrics.rs  mod.rs
crates/ripdoc-core/src/geometry/: bbox.rs  clustering.rs  ctm.rs  lines.rs  mod.rs
crates/ripdoc-core/src/layout/: mod.rs  reading_order.rs  structure.rs
crates/ripdoc-core/src/output/: csv.rs  html.rs  json.rs  markdown.rs
crates/ripdoc-core/src/table/: detect.rs  extract.rs  merge.rs  mod.rs  settings.rs
crates/ripdoc-core/src/text/: extract.rs  mod.rs  search.rs  words.rs
crates/ripdoc-python/: Cargo.toml  pyproject.toml
crates/ripdoc-python/.github/workflows/: CI.yml
crates/ripdoc-python/python/ripdoc/: __init__.py  compat.py
crates/ripdoc-python/src/: lib.rs  page.rs  pdf.rs  table.rs
visualizer/backend/: app.py  requirements.txt
visualizer/frontend/: index.html  package-lock.json  package.json
visualizer/frontend/src/: App.css  App.tsx  api.ts  types.ts
visualizer/frontend/src/components/: BenchmarkPanel.tsx  ControlPanel.tsx  DropZone.tsx  Nav.css  Nav.tsx  OverlayCanvas.tsx  PageSelector.tsx  PdfViewer.tsx  SearchBar.tsx  TablesPanel.tsx  TextPanel.tsx
visualizer/frontend/src/components/dashboard/: ApiKeyCard.tsx  PricingCards.tsx  QuickStart.tsx  UsageChart.tsx
visualizer/frontend/src/components/landing/: BenchmarkWidget.tsx  ExtractionRace.css  ExtractionRace.tsx  FeatureMatrix.tsx  FeatureShowcase.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx
visualizer/frontend/src/pages/: Dashboard.css  Dashboard.tsx  Landing.css  Landing.tsx  Playground.tsx
