[workspace]
members = [
    "crates/ripdoc-core",
    "crates/ripdoc-python",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jack Burrus"]
description = "The Polars of PDF extraction. 100x faster drop-in pdfplumber replacement."

[workspace.dependencies]
ripdoc-core = { path = "crates/ripdoc-core" }
lopdf = "0.39"
encoding_rs = "0.8"
unicode-normalization = "0.1"
rayon = "1.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
rstar = "0.12"
pyo3 = { version = "0.23", features = ["abi3-py38"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
