[package]
name = "ripdoc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core PDF extraction engine for ripdoc"

[dependencies]
lopdf = { workspace = true }
encoding_rs = { workspace = true }
unicode-normalization = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rstar = { workspace = true }

[dev-dependencies]
criterion = "0.5"
insta = "1"
