[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ripdoc"
description = "Rust-native PDF extraction. 73x faster than pdfplumber."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
keywords = ["pdf", "extraction", "table", "pdfplumber", "text"]

[project.urls]
Homepage = "https://github.com/jackburrus/ripdoc"
Repository = "https://github.com/jackburrus/ripdoc"

[tool.maturin]
features = ["pyo3/abi3-py38"]
python-source = "python"
module-name = "ripdoc._core"
